--- a/app/templates/continueing_edu/_registration_macros.html
+++ b/app/templates/continueing_edu/_registration_macros.html
@@ -19,7 +19,8 @@
                     <span class="icon"><i class="fas fa-sign-in-alt"></i></span>
                     <span>{{ texts.get('button_login', 'เข้าสู่ระบบ' if current_lang == 'th' else 'Login') }}</span>
           </a>
-          <a href="{{ url_for('continuing_edu.register', lang=current_lang) }}" class="button is-info">
+          <a href="{{ url_for('continuing_edu.register', lang=current_lang, next=url_for('continuing_edu.register_event', event_id=event.id, lang=current_lang)) }}"
+                    class="button is-info">
                     <span class="icon"><i class="fas fa-user-plus"></i></span>
                     <span>{{ texts.get('button_signup', 'สมัครสมาชิก' if current_lang == 'th' else 'Sign Up') }}</span>
           </a>
